--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-pdf": "^7.7.1"
+    "react-pdf": "^7.7.1",
+    "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
